# ChangeLog for dev-libs/re2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/re2/ChangeLog,v 1.2 2012/11/07 04:06:03 phajdan.jr Exp $

*re2-0_p20121029-r1 (07 Nov 2012)

  07 Nov 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/re2-symbols-r0.patch, +re2-0_p20121029-r1.ebuild:
  Remove clutter from pkg_setup, reported by floppym. Fix symbol visibility
  issues (to be upstreamed).

*re2-0_p20121029 (31 Oct 2012)

  31 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> +re2-0_p20121029.ebuild,
  +metadata.xml:
  Initial import. Ebuild by me, Mike Gilbert (floppym) and Jauhien Piatlicki.
  Bug #310605 by Alex Efros.
