@@ -3,14 +3,15 @@ Hash: SHA256
 
 AUX re2-symbols-r0.patch 261 SHA256 7db8997c9610ad4c1e5b7287bcbe005e1a29782a7e4988a6e71688a75ffb4951 SHA512 9f90010d802a017842c9d2a9a5c9cd5002dd4e24e318c13e3d79e8b4031f0cd0a6150257e217f4210ae4efa5e62e9c392dc3c3cd314f66849ed252e9eaabd05c WHIRLPOOL 86d0f59bec9f4073fa05879330348bce27901223201437eafb04dee15e51003bb19eceabbafa6bc594f3f5cbdad80f6946642b66c7e2a0e94223a58002b9b9ee
 DIST re2-20121029.tgz 1018117 SHA256 197f3169e23f18367a8b9148c5d622faf19b72d844b2df2c9ec4475e68492882 SHA512 2d6b2e1c30d09690fa3c8ee36f5e1c6b2b057dc33f365fbe4e213e51f23d7861b15259fb9e476716320119134022618c9c418ce4716765febfe0bfc0ddc82822 WHIRLPOOL 97c46c95ccd58a88a7dbbb8e7677685bac76fbf63f7cb9e0d4fb3df806be032d4780099b716bad7a0f66825e65d973bbc737f4eb308d75c3122c7b2c3c590a8c
+DIST re2-20121127.tgz 1018992 SHA256 1f3940357d38ab949901a5c3177a2b40f82c314ed39f20892f1b56376c5edef0 SHA512 47822af8a6c85831e3df3ca3e32f8c47e0c8d9e9746c2ee42d98993e448c09fb9bb273ffe885b83b456f3477e3b290d1ba8e7ef4c7392e38c9829d577b9c0b59 WHIRLPOOL 27c5e07295b2a2074b55c601c69b56e7d92f5209dc2a74158d2756a42f7cdb4fbdf83d834850ea62ffeb6d0d0c087e02a519109f04ffe752a3bd392ef974a918
 EBUILD re2-0_p20121029-r1.ebuild 1228 SHA256 f80594628b0286f3b4c3be1d1979f825c0745866a590d9f731ffec692afffd72 SHA512 92f24e1b0502ce6dd2ffc709093ffaf1d5a3528f480ad5e5293048e07a21e86e53f9ad7badac9bc9b3669e04b6e201c736b710cfc5280bc2a2942057d4b8c92e WHIRLPOOL d7f58c8529241f2f698e1ccb4cb1112e057eead758192450b159f2c26ce90cf22a7a7d11c6485d5e6173be8818f442d0e4d9062c965d76b989fe1306921a52d1
-EBUILD re2-0_p20121029.ebuild 1117 SHA256 9a3ef5f9f42a5fd4b861c9bac4c30dfd58927515fabea896852e435772837238 SHA512 28014c50727b7d7e6a86abea0bc06461e8ddf2c01efd625eb195ec50757fd9896cc1e70a9c9e8b3a5b4dbf6b15e5999b970467bdef037e2dbb33b1ad0c778e08 WHIRLPOOL d4731cbc5712aaf6fb6b273762f1d69908f264923e022494f3519a556ce14584a90b0cd7e297239bba5584b29169d01a0996ea4fa6a4f738911d47f54711f136
-MISC ChangeLog 693 SHA256 26054017d03cb2c49763f0c798dc66e95cfae0c643ca52c9d2bf4deaa9bb0b38 SHA512 f5b0665d0573969e0b567dda1c912bfa539f73b33d07f45fba177f6463bdd8c4cd7fd74580ba3763b147f631bd0a5599e50b6e978613c41f5794737a309a39a7 WHIRLPOOL 409b347a34c41e200d9bcdc86307330ae9e0b90b0dff368a73e2553af34dd195a4b5302bcae2cba0bb35c7babf41c9455397204418693d9803376a8376c772da
+EBUILD re2-0_p20121127.ebuild 1210 SHA256 c5225c64f6d3b16f2fe13a81ec8606668c86d18723eef530cc401792c9aec096 SHA512 c516e0a388ef074d930d06da6a298e59f21810ab5e3497eb44898b7991e31da82e99cdaa29df323b72bc34277e71291012b589be8212e790f3124eb05468a402 WHIRLPOOL 83320b0cf301cbafe8a182d1cb96a40b09803fa07f8441a4f6830b1735cf0a361782491e167724fa21dd523080290fd76710d3cfc05111548dec2f320c98a6c9
+MISC ChangeLog 861 SHA256 8e4b6e0147fa36b07977a95d62634e5af3150fe4a493403b823e69aff1468420 SHA512 a8d9a5983af2c0cdf6fcaafb9de5419e7588d1e4af064317ad771d2bb88d6ecb286b41335ef492b4d48c3204e5ce57a00269cf46dd382caeac6515c654f50783 WHIRLPOOL 6d8164496212db3d2faced9da2383da4a2e43fb1474c021f7eff7ea2d82e0168246f5b98ee33e0efbc81ac94f4b52d68bae1e208271088031bda759bb7ef18a7
 MISC metadata.xml 162 SHA256 8a3ecdcf518f45ec4843398f9896c9b4d1c867ff2cf2851cf40b06f756f111e8 SHA512 51796fe7e55b73dbfbe4a6b5fd089f5e8e4d327ff67d4a267692dda38380df5048ea77e8f058c466ae17726af5f099a3240b0500d53e421d95acc583164d3fe9 WHIRLPOOL 279b6ed997fab0d4278c01814bdd067068bceff8d1ce9933087828ce7598513b5a809013c996a3b134da6072c698a87ae151cfb56407fd62ff465b165197f5bf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCZ3jQACgkQuUQtlDBCeQJa+wCff9PnGLDo8ySfMCvx1h80F64s
-niEAoIexlV3+BcQyV50i9s4PwX+RhrCZ
-=B2wT
+iEYEAREIAAYFAlD01bsACgkQuUQtlDBCeQIMYQCfcgGunFXR5+v44nsbhsvYCSjN
+TnUAn0O8LeTOFOanGWWMkTSOf2K3i2rN
+=AUcx
 -----END PGP SIGNATURE-----
