@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/re2
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/re2/ChangeLog,v 1.2 2012/11/07 04:06:03 phajdan.jr Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/re2/ChangeLog,v 1.3 2013/01/15 04:06:10 phajdan.jr Exp $
+
+*re2-0_p20121127 (15 Jan 2013)
+
+  15 Jan 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> -re2-0_p20121029.ebuild,
+  +re2-0_p20121127.ebuild:
+  Version bump. Remove old.
 
 *re2-0_p20121029-r1 (07 Nov 2012)
 
